--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="container mt-5">
+    <div class="card text-center" style="padding: 20px;">
+        <h1>This is Home Page</h1>
+    </div>    
+</div>
