--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,5 @@
-<p>user works!</p>
+<div class="container">
+    <div class="card text-center" style="padding: 20 px; color: red">
+        <h1>You are user</h1>
+    </div>
+</div>
