--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,25 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #cccccc;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">RemarketRetro</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/admin">Admin Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/user">User Dashboard</a>
-          </li>
-          <!-- <li class="nav-item">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">RemarketRetro</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/admin">Admin Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/user">User Dashboard</a>
+        </li>
+        <!-- <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li> -->
-          <!-- <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
@@ -29,16 +30,17 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li> -->
-          <!-- <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li> -->
-        </ul>
-        <!-- <form class="d-flex" role="search">
+      </ul>
+      <!-- <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
-        <button type="button" class="btn btn-success" routerLink="/login">entre ou cadastre-se</button>
-        <button type="button" class="btn btn-danger">logout</button>
-      </div>
+      <button *ngIf="! isLoggedIn()" type="button" class="btn btn-success" routerLink="/login">entre ou
+        cadastre-se</button>
+      <button *ngIf="isLoggedIn()" type="button" class="btn btn-danger" (click)="logout()">logout</button>
     </div>
-  </nav>
+  </div>
+</nav>
