--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,6 @@
-<div class="container">
+<div class="container mt-5">
     <div class="card text-center" style="padding: 20 px; color: red">
         <h1>You are user</h1>
+        <h1>{{message}}</h1>
     </div>
 </div>
