restringe a criação de produtos aos admins

--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -45,8 +45,23 @@
             </div>
             <div class="col-6">
                 <div>
-                    <input type="file" multiple value="select" #selectFile 
-                        (change)="onFileSelected($event)">
+                    <div class="dropzone"
+                    appDrag
+                    (files) = "fileDropped($event)">
+                        <div class="text-wrapper">
+                            <div class="centered">
+                                Drag and drop your file or 
+                                <a (click)="selectFile.click()" class="browse-button">browse</a>
+                                a file
+                            </div>
+                        </div>
+                    </div>
+                    <input multiple
+                    type="file" 
+                    style="display: none;"
+                    #selectFile 
+                    value="select" 
+                    (change)="onFileSelected($event)">
                 </div>
                 <div class="mt-5">
                     <div class="row">
