--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -66,10 +66,13 @@
                 <div class="mt-5">
                     <div class="row">
                         <mat-grid-list cols="4" rowHeight="1:1">
-                            <mat-grid-tile *ngFor="let file of product.productImages; let i = index">
+                            <mat-grid-tile *ngFor="let file of product.productImages; let i = index;">
                                 <div style="position: relative">
-                                    <span class="btn-remove-image" (click)="removeImages(i)">x</span>
-                                    <img [src]="file.url" width="100px" height="100px">
+                                    <span class="btn-remove-image" 
+                                        (click)="removeImages(i)">x</span>
+                                    <img [src]="file.url" 
+                                        width="100px" 
+                                        height="100px">
                                 </div>
                             </mat-grid-tile>
                         </mat-grid-list>
