--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,4 +15,7 @@
   <button mat-raised-button color="primary" routerLink="/">Home</button>
   <button *ngIf="isAdmin()" mat-raised-button color="primary" 
     routerLink="/addNewProduct">Add New Product</button>
+  <button *ngIf="isAdmin()" mat-raised-button color="primary" 
+    routerLink="/showProductDetails">Show Product Details</button>
+
 </mat-toolbar>
