--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -37,9 +37,14 @@
 
                     <div align="end">
                         <button mat-stroked-button 
-                        color="primary" style="margin-right: 3px;">Clear</button>
-                        <button type="submit" mat-stroked-button 
-                        color="primary">Add Product</button>
+                            color="primary" 
+                            style="margin-right: 3px;">Clear</button>
+                        <button type="submit" *ngIf="isNewProduct"
+                            mat-stroked-button 
+                            color="primary">Add Product</button>
+                        <button type="submit" *ngIf="!isNewProduct"
+                            mat-stroked-button 
+                            color="primary">Update Product</button>
                     </div>
                 </form>
             </div>
