--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="mt-5 p-3">
     <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
 
         <!-- Id Column -->
@@ -14,7 +14,7 @@
         </ng-container>
 
         <!-- Product Description Column -->
-        <ng-container matColumnDef="Product Description">
+        <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef> Product Description </th>
             <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
         </ng-container>
@@ -32,29 +32,15 @@
         </ng-container>
 
         <!-- Images -->
-        <ng-container matColumnDef="Images">
-            <th mat-header-cell *matHeaderCellDef> Images </th>
+        <ng-container matColumnDef="Actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button color="primary" (click)="showImages(element)">
                     <mat-icon> images </mat-icon>
                 </button>
-            </td>
-        </ng-container>
-
-        <!-- Edit Button -->
-        <ng-container matColumnDef="Edit">
-            <th mat-header-cell *matHeaderCellDef> Edit </th>
-            <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="primary" (click)="editProductDetails(element.productId)">
                     <mat-icon> edit </mat-icon>
                 </button>
-            </td>
-        </ng-container>
-
-        <!-- Delete Button -->
-        <ng-container matColumnDef="Delete">
-            <th mat-header-cell *matHeaderCellDef> Delete </th>
-            <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="warn" (click)="deleteProduct(element.productId)">
                     <mat-icon> delete </mat-icon>
                 </button>
