--- a/src/app/product-view-details/product-view-details.component.html
+++ b/src/app/product-view-details/product-view-details.component.html
@@ -30,7 +30,7 @@
                         {{product.productActualPrice}}</b>
                 </div>
                 <div class="mt-5 text-center">
-                    <button mat-raised-button color="warn" style="width: 200px;" (click)="buyProduct()">Buy Now</button>
+                    <button mat-raised-button color="warn" style="width: 200px;" (click)="buyProduct(product.productId)">Buy Now</button>
                 </div>
             </div>
         </div>
