--- a/src/app/buy-product/buy-product.component.html
+++ b/src/app/buy-product/buy-product.component.html
@@ -2,39 +2,29 @@
     <div class="card p-3">
         <div class="row">
             <div class="col-6">
-                <form #orderForm="ngForm" 
-                    (ngSubmit)="placeOrder(orderForm)">
+                <form #orderForm="ngForm" (ngSubmit)="placeOrder(orderForm)">
 
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Full name</mat-label>
-                        <input matInput 
-                            placeholder="Full name" 
-                            [(ngModel)]="orderDetails.fullName" 
-                            name="fullName">
+                        <input matInput placeholder="Full name" [(ngModel)]="orderDetails.fullName" name="fullName">
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Full address</mat-label>
-                        <input matInput 
-                            placeholder="Full address" 
-                            [(ngModel)]="orderDetails.fullAddress" 
+                        <input matInput placeholder="Full address" [(ngModel)]="orderDetails.fullAddress"
                             name="fullAddress">
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Contact Number</mat-label>
-                        <input matInput 
-                            placeholder="Contact Number" 
-                            [(ngModel)]="orderDetails.contactNumber" 
+                        <input matInput placeholder="Contact Number" [(ngModel)]="orderDetails.contactNumber"
                             name="contactNumber">
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Alternate Contact Number</mat-label>
-                        <input matInput 
-                            placeholder="Alternate Contact Number" 
-                            [(ngModel)]="orderDetails.alternateContactNumber" 
-                            name="alternateContactNumber">
+                        <input matInput placeholder="Alternate Contact Number"
+                            [(ngModel)]="orderDetails.alternateContactNumber" name="alternateContactNumber">
                     </mat-form-field>
 
                     <div align="right">
@@ -44,9 +34,43 @@
 
             </div>
             <div class="col-6">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde optio in excepturi ducimus aliquid numquam
-                commodi cum voluptatem impedit necessitatibus eveniet tenetur obcaecati, laudantium vero. Nesciunt optio
-                hic ducimus aliquam.
+                <table class="table">
+                    <thead class="thead">
+                        <tr>
+                            <th>Name</th>
+                            <th>Amount</th>
+                            <th>Quantity</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody class="tbody">
+                        <tr *ngFor="let product of productDetails">
+                            <td>{{product.productName}}</td>
+                            <td>{{product.productDiscountedPrice}}</td>
+                            <td>
+                                <select 
+                                #quantity
+                                class="form-select"
+                                [ngModel]="getQuantityForProduct(product.productId)"
+                                (change)="onQuantityChanged(quantity.value, product.productId)"
+                                >
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                            </td>
+                            <td>
+                                {{getCalculatedTotal(product.productId ,product.productDiscountedPrice)}}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Total</td>
+                            <td>{{getCalculatedGrandTotal()}}</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
