cria pagina de registro de novo usuario

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,14 +14,13 @@
             </mat-form-field>
 
             <button class="w-100" type="submit" mat-raised-button color="primary">Login</button>
-
-            <!-- <input type="text" ngModel name="userName" id="userName" placeholder="Enter your username"
-                class="form-control mb-3">
-
-            <input type="password" ngModel name="userPassword" id="userPassword" placeholder="Enter your password"
-                class="form-control mb-3">
-
-            <input type="submit" value="Login" class="btn btn-outline-primary form-control rounded-0"> -->
         </form>
+
+
     </div>
+    <div class="text-center">
+        <br>
+            <button class="w-20" mat-raised-button type="button" (click)="registerUser()">Create an account</button>        
+    </div>
+
 </div>
