--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,4 +26,10 @@
             </div>
         </mat-grid-tile>
     </mat-grid-list>
+
+    <div class="text-center mt-5" style="padding-bottom: 100px;" *ngIf="showLoadButton">
+        <button type="button" mat-raised-button color="primary" (click)="loadMoreProducts()">Load more</button>
+    </div>
+
+    <div class="mt-5" style="padding-bottom: 30px;"></div>
 </div>
