--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,53 +1,59 @@
 <div class="mt-5 p-3">
-    <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
+    <div *ngIf="showTable">
+        <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
 
-        <!-- Id Column -->
-        <ng-container matColumnDef="Id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
-        </ng-container>
+            <!-- Id Column -->
+            <ng-container matColumnDef="Id">
+                <th mat-header-cell *matHeaderCellDef> Id </th>
+                <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+            </ng-container>
 
-        <!-- Product Name Column -->
-        <ng-container matColumnDef="Product Name">
-            <th mat-header-cell *matHeaderCellDef> Product Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-        </ng-container>
+            <!-- Product Name Column -->
+            <ng-container matColumnDef="Product Name">
+                <th mat-header-cell *matHeaderCellDef> Product Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+            </ng-container>
 
-        <!-- Product Description Column -->
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Product Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
-        </ng-container>
+            <!-- Product Description Column -->
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef> Product Description </th>
+                <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
+            </ng-container>
 
-        <!-- Product Discounted Price Column -->
-        <ng-container matColumnDef="Product Discounted Price">
-            <th mat-header-cell *matHeaderCellDef> Product Discounted Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.productDiscountedPrice}} </td>
-        </ng-container>
+            <!-- Product Discounted Price Column -->
+            <ng-container matColumnDef="Product Discounted Price">
+                <th mat-header-cell *matHeaderCellDef> Product Discounted Price </th>
+                <td mat-cell *matCellDef="let element"> {{element.productDiscountedPrice}} </td>
+            </ng-container>
 
-        <!-- Product Actual Price Column -->
-        <ng-container matColumnDef="Product Actual Price">
-            <th mat-header-cell *matHeaderCellDef> Product Actual Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
-        </ng-container>
+            <!-- Product Actual Price Column -->
+            <ng-container matColumnDef="Product Actual Price">
+                <th mat-header-cell *matHeaderCellDef> Product Actual Price </th>
+                <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
+            </ng-container>
 
-        <!-- Images -->
-        <ng-container matColumnDef="Actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button mat-icon-button color="primary" (click)="showImages(element)">
-                    <mat-icon> images </mat-icon>
-                </button>
-                <button mat-icon-button color="primary" (click)="editProductDetails(element.productId)">
-                    <mat-icon> edit </mat-icon>
-                </button>
-                <button mat-icon-button color="warn" (click)="deleteProduct(element.productId)">
-                    <mat-icon> delete </mat-icon>
-                </button>
-            </td>
-        </ng-container>
+            <!-- Images -->
+            <ng-container matColumnDef="Actions">
+                <th mat-header-cell *matHeaderCellDef> Actions </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button color="primary" (click)="showImages(element)">
+                        <mat-icon> images </mat-icon>
+                    </button>
+                    <button mat-icon-button color="primary" (click)="editProductDetails(element.productId)">
+                        <mat-icon> edit </mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="deleteProduct(element.productId)">
+                        <mat-icon> delete </mat-icon>
+                    </button>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+    <div class="text-center p-5" *ngIf="showLoadMoreProductButton">
+        <button type="button" mat-raised-button color="primary" (click)="loadMoreProducts()">Load more</button>
+    </div>
 </div>
