--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,7 @@
 
 <mat-toolbar color="primary" *ngIf="isLoggedIn()">
   <button mat-raised-button color="primary" routerLink="/">Home</button>
+  <button *ngIf="!isAdmin()" mat-raised-button color="primary" routerLink="/cart">Cart</button>
   <button *ngIf="isAdmin()" mat-raised-button color="primary" 
     routerLink="/addNewProduct">Add New Product</button>
   <button *ngIf="isAdmin()" mat-raised-button color="primary" 
