cria menu sanduiche

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,15 @@
 .space-buttons {
     flex: 1 1 auto;
 }
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.example-container {
+    height: 100vh;
+}
+
+.example-sidenav {
+    width: 250px;
+}
