--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Sansation';
+    src: url('/assets/sansation/Sansation-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-body { margin: 0; 
+    font-family: 'Sansation', sans-serif !important; 
+}
 
 .mat-toolbar {
     background: #D9D9D9;
