--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,47 +1,83 @@
 <div class="container mt-5">
+  <div class="banner">
+    <img src="\assets\banner.png" />
+  </div>
 
-    <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Search any product</mat-label>
-        <input matInput 
-            #searchkeyword
-            (keyup)="searchByKeyword(searchkeyword.value)"
-            name="searchKey" 
-            id="searchKey" 
-            placeholder="Search any product">
-        <mat-hint>Search any product</mat-hint>
-    </mat-form-field>
+  <div class="search-field">
+    <input
+      #searchkeyword
+      (keyup)="searchByKeyword(searchkeyword.value)"
+      name="searchKey"
+      id="searchKey"
+      placeholder="Busque um produto"
+    />
+    <mat-icon>search</mat-icon>
+  </div>
 
+  <div class="row">
     <mat-grid-list cols="4" rowHeight="3:5" gutterSize="10">
-        <mat-grid-tile *ngFor="let p of productDetails">
-            <div class="row p-5">
-                <div class="image-container">
-                    <img class="home-page-product-image" [src]="p.productImages[0].url" alt="">
-                </div>
-                <div class="mt-3">
-                    <p><b>{{p.productName}}</b></p>
-                </div>
-                <div class="mt-2">
-                    <p style="white-space: inherit; 
-                    height: 40px;
-                    width: 288px;
-                    overflow: hidden; 
-                    text-overflow: ellipsis;">{{p.productDescription}}</p>
-                </div>
-                <div class="mt-2">
-                    <b>R${{p.productDiscountedPrice}}</b> 
-                    &nbsp;
-                    <b style="text-decoration: line-through;">R${{p.productActualPrice}}</b>
-                </div>
-                <div class="mt-2">
-                    <button type="button" mat-raised-button color="warn" (click)="showProductDetails(p.productId)">View Details</button>
-                </div>
-            </div>
-        </mat-grid-tile>
+      <mat-grid-tile *ngFor="let p of productDetails">
+        <div class="row p-5">
+          <div class="image-container">
+            <img
+              class="home-page-product-image"
+              [src]="p.productImages[0].url"
+              alt=""
+            />
+          </div>
+          <div class="mt-3">
+            <h2>
+              <b>{{ p.productName }}</b>
+            </h2>
+          </div>
+          <div class="mt-2">
+            <p
+              style="
+                white-space: inherit;
+                height: 40px;
+                width: 288px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+              "
+            >
+              {{ p.productDescription }}
+            </p>
+          </div>
+          <div class="mt-2">
+            <h3>
+              <b>R${{ p.productDiscountedPrice }} </b>
+
+              <b style="text-decoration: line-through"
+                >R${{ p.productActualPrice }}</b
+              >
+            </h3>
+          </div>
+          <div class="mb-3">
+            <button
+              class="details-btn"
+              type="button"
+              (click)="showProductDetails(p.productId)"
+            >
+              <b>VEJA MAIS</b>
+            </button>
+          </div>
+        </div>
+      </mat-grid-tile>
     </mat-grid-list>
+  </div>
 
-    <div class="text-center mt-5" style="padding-bottom: 100px;" *ngIf="showLoadButton">
-        <button type="button" mat-raised-button color="primary" (click)="loadMoreProducts()">Load more</button>
-    </div>
+  <div
+    class="text-center mt-5"
+    style="padding-bottom: 100px"
+    *ngIf="showLoadButton"
+  >
+    <button
+      type="button"
+      class="details-btn"
+      style="width: 15%;"
+      (click)="loadMoreProducts()"
+    >CARREGUE MAIS</button>
+  </div>
 
-    <div class="mt-5" style="padding-bottom: 30px;"></div>
+  <div class="mt-5" style="padding-bottom: 30px"></div>
 </div>
