--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5" style="width: 50%;">
     <div class="card" style="padding: 20px;">
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
             <mat-form-field appearance="outline" class="w-100">
@@ -13,14 +13,11 @@
                 <mat-hint>Password</mat-hint>
             </mat-form-field>
 
-            <button class="w-100" type="submit" mat-raised-button color="primary">Login</button>
+            <button class="w-100" type="submit" class="details-btn">Login</button>
         </form>
-
-
     </div>
     <div class="text-center">
         <br>
-            <button class="w-20" mat-raised-button type="button" (click)="registerUser()">Create an account</button>        
+            <button class="details-btn" style="width: 30%;" type="button" (click)="registerUser()">Quero me cadastrar</button>        
     </div>
-
 </div>
