--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,10 @@ body {
     outline: none;
     box-shadow: none;
 }
+
+.details-btn {
+    width: 100%;
+    padding: 1rem 2rem;
+    background: transparent;
+    border: 3px solid #d9d9d9;
+}
