--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,18 +2,18 @@
     <div class="card" style="padding: 20px;">
         <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
             <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Username</mat-label>
+                <mat-label>Usuário</mat-label>
                 <input matInput ngModel name="userName" id="userName" placeholder="Username">
-                <mat-hint>Username</mat-hint>
+                <mat-hint>Usuário</mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Password</mat-label>
+                <mat-label>Senha</mat-label>
                 <input type="password" matInput ngModel name="userPassword" id="userPassword" placeholder="Password">
-                <mat-hint>Password</mat-hint>
+                <mat-hint>Senha</mat-hint>
             </mat-form-field>
 
-            <button class="w-100" type="submit" class="details-btn">Login</button>
+            <button class="w-100" type="submit" class="details-btn">Enviar</button>
         </form>
     </div>
     <div class="text-center">
