alterações no estilo

--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -1,89 +1,107 @@
 <div class="container mt-5">
-    <div class="card p-2">
-        <div class="row">
-            <div class="col-6">
-                <form #productForm="ngForm" (ngSubmit)="addProduct(productForm)">
-                    <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Título</mat-label>
-                        <input matInput 
-                        placeholder="Título"
-                        [(ngModel)]="product.productName"
-                        name="productName">
-                    </mat-form-field>
+  <div class="card p-2">
+    <div class="row">
+      <div class="col-6">
+        <form #productForm="ngForm" (ngSubmit)="addProduct(productForm)">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Título</mat-label>
+            <input
+              matInput
+              placeholder="Título"
+              [(ngModel)]="product.productName"
+              name="productName"
+            />
+          </mat-form-field>
 
-                    <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Descrição</mat-label>
-                        <input matInput 
-                        placeholder="Descrição"
-                        [(ngModel)]="product.productDescription"
-                        name="productDescription">
-                    </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Descrição</mat-label>
+            <input
+              matInput
+              placeholder="Descrição"
+              [(ngModel)]="product.productDescription"
+              name="productDescription"
+            />
+          </mat-form-field>
 
-                    <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Preço</mat-label>
-                        <input matInput 
-                        placeholder="Preço"
-                        [(ngModel)]="product.productActualPrice"
-                        name="productActualPrice">
-                    </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Preço original</mat-label>
+            <input
+              matInput
+              placeholder="Preço original"
+              [(ngModel)]="product.productActualPrice"
+              name="productActualPrice"
+            />
+          </mat-form-field>
 
-                    <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Preço com desconto</mat-label>
-                        <input matInput 
-                        placeholder="Product Discounted Price"
-                        [(ngModel)]="product.productDiscountedPrice"
-                        name="productDiscountedPrice">
-                    </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Preço com desconto</mat-label>
+            <input
+              matInput
+              placeholder="Product Discounted Price"
+              [(ngModel)]="product.productDiscountedPrice"
+              name="productDiscountedPrice"
+            />
+          </mat-form-field>
 
-                    <div align="end">
-                        <button mat-stroked-button 
-                            color="primary" 
-                            style="margin-right: 3px;">Clear</button>
-                        <button type="submit" *ngIf="isNewProduct"
-                            mat-stroked-button 
-                            color="primary">Add Product</button>
-                        <button type="submit" *ngIf="!isNewProduct"
-                            mat-stroked-button 
-                            color="primary">Update Product</button>
-                    </div>
-                </form>
+          <div align="end">
+            <button class="details-btn-small" style="margin-right: 3px">
+              limpar
+            </button>
+            <button
+              type="submit"
+              *ngIf="isNewProduct"
+              class="details-btn-small"
+            >
+              cadastrar produto
+            </button>
+            <button
+              type="submit"
+              *ngIf="!isNewProduct"
+              mat-stroked-button
+              color="primary"
+            >
+              atualizar produto
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="col-6">
+        <div>
+          <div class="dropzone" appDrag (files)="fileDropped($event)">
+            <div class="text-wrapper">
+              <div class="centered">
+                Arraste suas imagens aqui ou
+                <a (click)="selectFile.click()" class="browse-button">busque</a>
+                em sua máquina
+              </div>
             </div>
-            <div class="col-6">
-                <div>
-                    <div class="dropzone"
-                    appDrag
-                    (files) = "fileDropped($event)">
-                        <div class="text-wrapper">
-                            <div class="centered">
-                                Drag and drop your file or 
-                                <a (click)="selectFile.click()" class="browse-button">browse</a>
-                                a file
-                            </div>
-                        </div>
-                    </div>
-                    <input multiple
-                    type="file" 
-                    style="display: none;"
-                    #selectFile 
-                    value="select" 
-                    (change)="onFileSelected($event)">
-                </div>
-                <div class="mt-5">
-                    <div class="row">
-                        <mat-grid-list cols="4" rowHeight="1:1">
-                            <mat-grid-tile *ngFor="let file of product.productImages; let i = index;">
-                                <div style="position: relative">
-                                    <span class="btn-remove-image" 
-                                        (click)="removeImages(i)">x</span>
-                                    <img [src]="file.url" 
-                                        width="100px" 
-                                        height="100px">
-                                </div>
-                            </mat-grid-tile>
-                        </mat-grid-list>
-                    </div>
-                </div>
-            </div>
+          </div>
+          <input
+            multiple
+            type="file"
+            style="display: none"
+            #selectFile
+            value="select"
+            (change)="onFileSelected($event)"
+          />
         </div>
+        <div class="mt-5">
+          <div class="row">
+            <mat-grid-list cols="4" rowHeight="1:1">
+              <mat-grid-tile
+                *ngFor="let file of product.productImages; let i = index"
+              >
+                <div style="position: relative">
+                  <span class="btn-remove-image" (click)="removeImages(i)"
+                    >x</span
+                  >
+                  <img [src]="file.url" width="100px" height="100px" />
+                </div>
+              </mat-grid-tile>
+            </mat-grid-list>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
