--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,7 @@
               type="button"
               (click)="showProductDetails(p.productId)"
             >
-              <b>VEJA MAIS</b>
+              <b>veja mais</b>
             </button>
           </div>
         </div>
@@ -76,7 +76,7 @@
       class="details-btn"
       style="width: 15%;"
       (click)="loadMoreProducts()"
-    >CARREGUE MAIS</button>
+    >carregue mais</button>
   </div>
 
   <div class="mt-5" style="padding-bottom: 30px"></div>
