--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,53 +1,47 @@
 <div class="mt-5 p-3">
 
     <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Search any product</mat-label>
+        <mat-label>Busque um produto</mat-label>
         <input matInput 
             #searchkeyword
             (keyup)="searchByKeyword(searchkeyword.value)"
             name="searchKey" 
             id="searchKey" 
             placeholder="Search any product">
-        <mat-hint>Search any product</mat-hint>
+        <mat-hint>Busque um produto</mat-hint>
     </mat-form-field>
 
     <div *ngIf="showTable">
         
         <table mat-table [dataSource]="productDetails" class="mat-elevation-z8">
 
-            <!-- Id Column -->
             <ng-container matColumnDef="Id">
                 <th mat-header-cell *matHeaderCellDef> Id </th>
                 <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
             </ng-container>
 
-            <!-- Product Name Column -->
             <ng-container matColumnDef="Product Name">
-                <th mat-header-cell *matHeaderCellDef> Product Name </th>
+                <th mat-header-cell *matHeaderCellDef> Nome do produto </th>
                 <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
             </ng-container>
 
-            <!-- Product Description Column -->
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Product Description </th>
+                <th mat-header-cell *matHeaderCellDef> Descrição do produto </th>
                 <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
             </ng-container>
 
-            <!-- Product Discounted Price Column -->
             <ng-container matColumnDef="Product Discounted Price">
-                <th mat-header-cell *matHeaderCellDef> Product Discounted Price </th>
+                <th mat-header-cell *matHeaderCellDef> Valor do produto com desconto </th>
                 <td mat-cell *matCellDef="let element"> {{element.productDiscountedPrice}} </td>
             </ng-container>
 
-            <!-- Product Actual Price Column -->
             <ng-container matColumnDef="Product Actual Price">
-                <th mat-header-cell *matHeaderCellDef> Product Actual Price </th>
+                <th mat-header-cell *matHeaderCellDef> Valor original do produto </th>
                 <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
             </ng-container>
 
-            <!-- Images -->
             <ng-container matColumnDef="Actions">
-                <th mat-header-cell *matHeaderCellDef> Actions </th>
+                <th mat-header-cell *matHeaderCellDef> Ações </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button color="primary" (click)="showImages(element)">
                         <mat-icon> images </mat-icon>
@@ -67,6 +61,6 @@
     </div>
 
     <div class="text-center p-5" *ngIf="showLoadMoreProductButton">
-        <button type="button" mat-raised-button color="primary" (click)="loadMoreProducts()">Load more</button>
+        <button type="button" class="details-btn-small" (click)="loadMoreProducts()">carregue mais</button>
     </div>
 </div>
