--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,38 @@ body {
 
 .details-btn {
     width: 100%;
-    padding: 1rem 2rem;
-    background: transparent;
+    padding: .5rem 2rem;
+    background: #787878;
     border: 3px solid #d9d9d9;
+    border-radius: 25px;
+    color: #000;
+    text-align: center;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.details-btn-small {
+    padding: .5rem 2rem;
+    background: #787878; 
+    border: 3px solid #d9d9d9;
+    border-radius: 25px; 
+    color: #000; 
+    text-align: center; 
+    font-size: 1rem; 
+    cursor: pointer; 
+    transition: background-color 0.3s ease;
+}
+
+.details-btn-small-white {
+    padding: 0.5rem 2rem;
+    background: #ffffff;
+    border: 3px solid #d9d9d9;
+    border-radius: 25px;
+    color: #000; 
+    text-align: center; 
+    font-size: 1rem; 
+    cursor: pointer; 
+    transition: background-color 0.3s ease;
+    white-space: nowrap;
 }
