--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -57,8 +57,7 @@
             <button
               type="submit"
               *ngIf="!isNewProduct"
-              mat-stroked-button
-              color="primary"
+              class="details-btn-small"
             >
               atualizar produto
             </button>
