--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,10 +15,10 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav #sidenav mode="side" class="example-sidenav">
     <mat-nav-list>
-      <a mat-list-item routerLink="/">Home</a>
-      <a *ngIf="!isAdmin()" mat-list-item routerLink="/cart">Cart</a>
-      <a *ngIf="isAdmin()" mat-list-item routerLink="/addNewProduct">Add New Product</a>
-      <a *ngIf="isAdmin()" mat-list-item routerLink="/showProductDetails">Show Product Details</a>
+      <a mat-list-item routerLink="/">Página inicial</a>
+      <a *ngIf="!isAdmin()" mat-list-item routerLink="/cart">Carrinho</a>
+      <a *ngIf="isAdmin()" mat-list-item routerLink="/addNewProduct">Adicione um novo produto</a>
+      <a *ngIf="isAdmin()" mat-list-item routerLink="/showProductDetails">Veja detalhes dos produtos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
