--- a/src/app/order-confirmation/order-confirmation.component.html
+++ b/src/app/order-confirmation/order-confirmation.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="card p-5 text-center">
         <h1>
-            Your order was placed successfully. It will be delivered to you within 4-5 business days.
+            Seu pedido foi feito com sucesso. Ele será entregue a você dentro de 4 a 5 dias úteis.
         </h1>    
     </div>
 </div>
