--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -21,7 +21,7 @@
 
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Senha</mat-label>
-                <input matInput ngModel name="userPassword" id="userPassword" placeholder="Password">
+                <input matInput ngModel name="userPassword" type="password" id="userPassword" placeholder="Password">
                 <mat-hint>Senha</mat-hint>
             </mat-form-field>
 
